frontend/test/should_pass/exact_008.grg
exact rule r {
	x:Node;
	y:Node;
	x --> y;
	y --> ;

	modify {
	}
}

