frontend/test/should_fail/retype_011.grg
rule r {
	x:Node -e:Edge-> y:Node;

	modify {
		x -f:UEdge<e>- y;
	}
}

